--- a/index.html
+++ b/index.html
@@ -13,16 +13,20 @@
     <header>
         <h1>Tic Tac Toe</h1>
     </header>
+    <div class="buttons">
+        <button class="btn">Player</button>
+        <button class="btn">AI Bot</button>
+    </div>
     <div class="gameboard">
-        <div class="boxes"></div>
-        <div class="boxes"></div>
-        <div class="boxes"></div>
-        <div class="boxes"></div>
-        <div class="boxes"></div>
-        <div class="boxes"></div>
-        <div class="boxes"></div>
-        <div class="boxes"></div>
-        <div class="boxes"></div>
+        <div class="boxes">x</div>
+        <div class="boxes">o</div>
+        <div class="boxes">x</div>
+        <div class="boxes">o</div>
+        <div class="boxes">x</div>
+        <div class="boxes">x</div>
+        <div class="boxes">o</div>
+        <div class="boxes">o</div>
+        <div class="boxes">o</div>
     </div>
     <footer>
         <p>
@@ -30,5 +34,6 @@
             2022 desiangel
         </p><i class="mdi mdi-github" style="font-size: 32px;"></i>
     </footer>
+    <script src="./app.js"></script>
 </body>
 </html>
