--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
         <button class="btn">AI Bot</button>
     </div>
     <div class="gameboard">
-        <div class="boxes">x</div>
-        <div class="boxes">o</div>
-        <div class="boxes">x</div>
-        <div class="boxes">o</div>
-        <div class="boxes">x</div>
-        <div class="boxes">x</div>
-        <div class="boxes">o</div>
-        <div class="boxes">o</div>
-        <div class="boxes">o</div>
+        <div class="boxes" data-number="1"></div>
+        <div class="boxes" data-number="2"></div>
+        <div class="boxes" data-number="3"></div>
+        <div class="boxes" data-number="4"></div>
+        <div class="boxes" data-number="5"></div>
+        <div class="boxes" data-number="6"></div>
+        <div class="boxes" data-number="7"></div>
+        <div class="boxes" data-number="8"></div>
+        <div class="boxes" data-number="9"></div>
     </div>
     <footer>
         <p>
